[tool.poetry]
name = "m1s-dock-network-camera"
version = "0.1.0"
description = "Network camera on Sipeed M1s Dock"
authors = ["KafCoppelia <k740677208@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "m1s_dock_network_camera"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
opencv-python = "^4.7.0.72"
apscheduler = "^3.10.1"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
